# PFN-throughput-bench

./: .gitignore  PLAN.md  pyproject.toml
bench/: bench_data_gen.py  train_baseline.py
src/: __init__.py  model_baseline.py
